# reorg

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  next.config.js  now.json  package-lock.json  package.json
components/: Name.js  Score.js
components/conference/: Conference.js  ConferenceList.js  ReviewCount.js  SubmissionCount.js
components/header/: Header.js  HeaderLink.js
components/login/: Login.js
components/reviewers/: Reviewers.js
components/reviews/: ReviewList.js
components/submissions/: StatusSymbol.js  Submissions.js
gql/: allConferenceReviewers.js  allConferenceSubmissionScores.js  allConferences.js  confReviews.js  confSubmissions.js  submissionDetails.js
gql/schema/: schema.gql  seed.py
layouts/: Layout.js
libs/: apollo.js  apolloClient.js
migrations/2019-06-10-110109_conferences/: down.sql  up.sql
migrations/2019-06-10-194831_submissions/: up.sql
migrations/2019-06-10-194837_users/: up.sql
migrations/2019-06-11-121252_reviewers/: down.sql  up.sql
migrations/2019-06-12-073859_reviews/: up.sql
migrations/2019-06-28-013618_status/: down.sql  up.sql
pages/: about.js  index.js
pages/about/: index.js
pages/api/: conference.js  conferences.js  submission.js  submissions.js  user.js
pages/conference/: [id].js
pages/conferences/: [id].js  index.js
pages/logout/: index.js
pages/reviews/: index.js
pages/submissions/: [id].js
pages/user/: index.js
public/: index.html
schema/: reorg-schema.gql
src/: index.js  lib.rs  models.rs  schema.rs
src/conference/: mod.rs  model.rs  schema.rs
src/data/: mod.rs
src/queries/: mod.rs
src/review/: mod.rs  model.rs  schema.rs
src/reviewer/: mod.rs  model.rs  schema.rs
src/status/: mod.rs  model.rs  schema.rs
src/submission/: mod.rs  model.rs  schema.rs
templates/: base.html.tera  conferences.html.tera  submission.html.tera  submissions.html.tera
(+18 files in other folders)
