[package]
name = "reorg"
version = "0.1.0"
authors = ["Paul Adams <paul@baggerspion.net>"]
edition = "2018"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["chrono", "postgres"] }
dotenv = "0.14.1"
fake = { version = "1.3.0", features = ["chrono"] }