[package]
name = "reorg"
version = "0.1.0"
authors = ["Paul Adams <paul@baggerspion.net>"]
edition = "2018"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[[bin]]
name = "reorg"
path = "src/bin/reorg.rs"

[dependencies]
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["chrono", "postgres"] }
dotenv = "0.14.1"
fake = { version = "1.3.0", features = ["chrono"] }
rand = "0.6.5"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
rocket = "0.4.1"
rocket_codegen = "0.4.1"
rocket_contrib = { version = "0.4.1", default-features = false, features = ["tera_templates"] }
serde = "1.0.92"
serde_derive = "1.0.92"
tera = "0.11.20"