[package]
name = "reorg"
version = "0.1.0"
authors = ["Paul Adams <paul@baggerspion.net>"]
edition = "2018"

[[bin]]
name = "reorg"
path = "src/bin/reorg.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
bigdecimal = { version = ">= 0.0.10, < 0.0.15", features = ["serde"] }
chrono = { version = "0.4.6" }
diesel = { version = "1.4.2", features = ["bigdecimal", "chrono", "numeric", "postgres", "serde_json"] }
dotenv = "0.14.1"
fake = { version = "1.3.0", features = ["chrono"] }
jsonwebtoken = "5.0.1"
rand = "0.6.5"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
rocket = "0.4.1"
rocket_codegen = "0.4.1"
rocket_contrib = { version = "0.4.1", default-features = false, features = ["json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.92" }
serde_derive = "1.0.92"
serde_json = "1.0.39"